<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app1_name">Android Port Scanner</string>
		<string name="app2_name">Android IP Information</string>
		<string name="host_name">Host Name or IP: </string>
		<string name="port_range">Port Range: (456,67,7500-7510) </string>
		<string name="end_port">End Port: </string>
		<string name="configure_packet_label">Configure Packet</string>
		<string name="scan_label">Scan</string>
		<string name="stop_label">Stop</string>
		<string name="host_name_hint">www.mysite.com</string>
		<string name="ip_address_hint">192.168.106.105</string>
		<string name="zero_hint">0</string>
		
		<string name="ihl_label">IHL</string>
		<string name="version_label">Version</string>
		<string name="tos_label">TOS</string>
		<string name="ttl_label">TTL</string>
		<string name="protocol_label">Protocol</string>
		<string name="tot_len_label">Total Length</string>
		<string name="id_label">Identification</string>
		<string name="frag_label">Fragmentation</string>
		<string name="check_label">Check</string>
		<string name="saddr_label">Send Address</string>
		<string name="daddr_label">Destination Address</string>
</resources>
