<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp">
       
        <TextView
        android:id="@+id/protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protocol_label"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
        
       <EditText
        android:id="@+id/iph_protocol"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        />    
        <TextView
        android:id="@+id/tot_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tot_len_label"
        android:layout_marginLeft="10dp"
        />
        
        <EditText
        android:id="@+id/iph_tot_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        />
    
       <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"
        android:layout_marginLeft="15dp"
        />
        
        <EditText
        android:id="@+id/iph_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        />
    
        <TextView
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_label"
        android:layout_marginLeft="15dp"
        />
        
        <EditText
        android:id="@+id/iph_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        />
       

</LinearLayout>
