<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:orientation="horizontal" 
    android:paddingLeft="10dp">
		
		    <TextView
				android:id="@+id/ihl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ihl_label"
        android:layout_gravity="bottom"
				android:layout_marginTop="20dp"
				android:layout_marginLeft="5dp"
				/>
				
		    <EditText
				android:id="@+id/iph_ihl"
				android:layout_width="75dp"
				android:layout_height="wrap_content"
				android:hint="@string/zero_hint"
				android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
				android:layout_marginLeft="5dp"
				android:inputType="number"
				/>
		
       <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_label"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        />
        
        <EditText
        android:id="@+id/iph_version"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:inputType="number"
        />
    
        <TextView
        android:id="@+id/tos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tos_label"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        />
        
        <EditText
        android:id="@+id/iph_tos"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:inputType="number"
        />
        
        <TextView
        android:id="@+id/ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_label"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        />
        
       <EditText
        android:id="@+id/iph_ttl"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:inputType="number"
        />

</LinearLayout>
