<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
        
        <TextView
        android:id="@+id/saddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saddr_label"
        android:layout_marginLeft="15dp"
        />
        
       <EditText
        android:id="@+id/iph_saddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="number"
        />
       
        <TextView
        android:id="@+id/daddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daddr_label"
        android:layout_marginLeft="15dp"
        />
        
       <EditText
        android:id="@+id/iph_daddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero_hint"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="number"
        />

</LinearLayout>
